--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/lgs-code/2d-geometry#readme",
   "scripts": {
+    "build": "tsc",
     "test": "tsc & jest"
   },
   "devDependencies": {
