--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "2d-geometry",
   "version": "0.0.1",
   "description": "TypeScript library for 2d geometry",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/2d-geometry.js",
+  "module": "dist/2d-geometry.mjs",
+  "browser": "dist/2d-geometry.umd",
+  "types": "dist/2d-geometry.d.ts",
   "files": [
     "/dist"
   ],
@@ -22,12 +24,16 @@
   },
   "homepage": "https://github.com/lgs-code/2d-geometry#readme",
   "scripts": {
-    "build": "tsc",
-    "test": "tsc & jest"
+    "clean": "rimraf build && rimraf dist",
+    "build": "npm run clean && tsc && rollup -c rollup.config.js --bundleConfigAsCjs && rimraf dist/build",
+    "test": "npm run build & jest"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
     "@babel/preset-typescript": "^7.22.15",
+    "@rollup/plugin-commonjs": "^25.0.7",
+    "@rollup/plugin-node-resolve": "^15.2.3",
+    "@rollup/plugin-typescript": "^11.1.5",
     "@types/jest": "^29.5.4",
     "babel-jest": "^29.6.4",
     "eslint": "^8.2.0",
@@ -38,6 +44,8 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.6.4",
     "prettier": "^3.0.3",
+    "rollup": "^4.5.1",
+    "rollup-plugin-dts": "^6.1.0",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2"
   }
