--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "build:dev": "npm run clean && tsc && rollup -c && rimraf dist/build",
     "build:prod": "npm run clean && tsc -p tsconfig.prod.json && rollup -c --environment BUILD:production && rimraf dist/build",
     "test:dev": "npm run build:dev & jest",
-    "test": "jest"
+    "test:prod": "jest"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.22.15",
