--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
       "es2017"
     ],
     "declaration": true,
-    "sourceMap": false,
+    "sourceMap": true,
     "outDir": "build",
   },
   "include": [
