--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,4 @@ jobs:
           cache: "npm"
       - run: npm ci
       - run: npm run build:dev --if-present
-      - run: npm test:prod --if-present
+      - run: npm run test:prod --if-present
