--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "2d-geometry",
-  "version": "0.0.1",
+  "name": "@lgs-code/2d-geometry",
+  "version": "1.0.0",
   "description": "TypeScript library for 2d geometry",
   "main": "dist/2d-geometry.js",
   "module": "dist/2d-geometry.mjs",
