Add Arc2d and Sector2d shapes

--- a/package.json
+++ b/package.json
@@ -15,7 +15,15 @@
   },
   "keywords": [
     "2d",
-    "geometry"
+    "geometry",
+    "point",
+    "line",
+    "circle",
+    "ellipse",
+    "polygon",
+    "quadrilateral",
+    "arc",
+    "sector"
   ],
   "author": "LGS",
   "license": "MIT",
